welcome.lessons.welcome.loopfor.LoopStairs.scala.code
baisseBrosse()
setCouleurBrosse(color.darkGray)

for(i <- 1 to 3)
	avance()

leveBrosse()

while (estFaceMur())
{
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
}